--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html>
 
@@ -7,18 +6,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Andrei's Resume</title>
 <link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
 <body>
 <!-- Navigation Bar -->
-    <div class="navbar">
+    <div class="navbar" id="myTopnav">
         <a href="#Summary">Summary</a>
         <a href="#Experience">Work Experience</a>
         <a href="#Education">Education</a>
         <a href="#Projects">Side Projects</a>
         <a href="#Skills">Skills</a>
         <a href="#Contact">Contact Me</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </div>
 <!-- End Navagation Bar -->
 
@@ -352,3 +355,4 @@
 </body>
 
 </html>
+
