--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121918626-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121918626-1');
+</script>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Andrei's Resume</title>
+
 <link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
