--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
                 <div class="text">Microsoft Access database showing reference map.</div>
             </div>
 
+	          <div class="mySlides fade">
+                <img src="images/2DPCB.PNG" style="width:100%">
+                <div class="text">Embedded Control System for Tank Level Control</div>
+            </div>
+
+	          <div class="mySlides fade">
+                <img src="images/3DPCB.PNG" style="width:100%">
+                <div class="text">Embedded Control System for Tank Level Control.</div>
+            </div>
 
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -119,6 +128,8 @@
                 <span class="dot" onclick="currentSlide(7)"></span> 
                 <span class="dot" onclick="currentSlide(8)"></span>  
                 <span class="dot" onclick="currentSlide(9)"></span>
+		            <span class="dot" onclick="currentSlide(10)"></span>  
+                <span class="dot" onclick="currentSlide(11)"></span>	
             </div>
         </div>
 
@@ -365,4 +376,3 @@
 </body>
 
 </html>
-
