--- a/index.html
+++ b/index.html
@@ -104,13 +104,28 @@
                 <div class="text">Microsoft Access database showing reference map.</div>
             </div>
 
-	          <div class="mySlides fade">
+	        <div class="mySlides fade">
                 <img src="images/2DPCB.PNG" style="width:100%">
                 <div class="text">Embedded Control System for Tank Level Control</div>
             </div>
 
-	          <div class="mySlides fade">
+	        <div class="mySlides fade">
                 <img src="images/3DPCB.PNG" style="width:100%">
+                <div class="text">Embedded Control System for Tank Level Control.</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="images/20190802_124657.jpg" style="width:100%">
+                <div class="text">Embedded Control System for Tank Level Control.</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="images/20190805_170756.jpg" style="width:100%">
+                <div class="text">Embedded Control System for Tank Level Control.</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="images/20190807_105825.jpg" style="width:100%">
                 <div class="text">Embedded Control System for Tank Level Control.</div>
             </div>
 
@@ -128,8 +143,11 @@
                 <span class="dot" onclick="currentSlide(7)"></span> 
                 <span class="dot" onclick="currentSlide(8)"></span>  
                 <span class="dot" onclick="currentSlide(9)"></span>
-		            <span class="dot" onclick="currentSlide(10)"></span>  
-                <span class="dot" onclick="currentSlide(11)"></span>	
+		        <span class="dot" onclick="currentSlide(10)"></span>  
+                <span class="dot" onclick="currentSlide(11)"></span>
+                <span class="dot" onclick="currentSlide(12)"></span>
+                <span class="dot" onclick="currentSlide(13)"></span>
+                <span class="dot" onclick="currentSlide(14)"></span>	
             </div>
         </div>
 
