--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- Header -->
     <div class="main">
-        <img src="images/headshot2.png" width = "10%" class="headshot">
+        <!--<img src="images/headshot2.png" width = "10%" class="headshot">-->
         <h2 style= "margin-top: 20px">Andrei Petcu (U.S. Citizen)</h2>
         <h2>Mechanical Project Engineer with Programming Experience</h2>
         <p style= "border-bottom:2px solid white; clear:left;"></p>
