--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div class="row">
 				
 					<div class="col-sm-8 col-md-4 col-lg-3">
-						<div class="profile-img margin-b-30"><img src="images/headshot2.png" alt=""></div>
+						<div class="profile-img margin-b-30"><img src="images/20191001_181647_B.jpg" alt=""></div>
 					</div><!-- col-sm-8 -->
 					
 					<div class="col-sm-10 col-md-5 col-lg-6">		
