--- a/index.html
+++ b/index.html
@@ -234,6 +234,20 @@
 			<div class="portfolioContainer  margin-b-50">
 				
 				<div class="p-item Professional">
+					<a href="images/20200221_151437.jpg" data-fluidbox>
+						<img src="images/20200221_151437.jpg" alt=""></a>
+				</div><!-- p-item -->
+
+				<div class="p-item Professional">
+					<a href="images/20200325_123628.jpg" data-fluidbox>
+						<img src="images/20200325_123628.jpg" alt=""></a>
+				</div><!-- p-item -->
+
+				<div class="p-item Professional">
+					<a href="images/Surge_Tank_Grout.jpg" data-fluidbox>
+						<img src="images/Surge_Tank_Grout.jpg" alt=""></a>
+				</div><!-- p-item -->
+				<div class="p-item Professional">
 					<a href="images/20180403_090843.jpg" data-fluidbox>
 						<img src="images/20180403_090843.jpg" alt=""></a>
 				</div><!-- p-item -->
