--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121918626-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-121918626-1');
-</script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121918626-1"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+  		gtag('config', 'UA-121918626-1');
+	</script>
+	
 	<title>CV - Portfolio</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -85,7 +85,7 @@
 					</div><!-- col-sm-8 -->
 					
 					<div class="col-sm-10 col-md-3 col-lg-3">
-						<a class="downlad-btn" href="Downloads/2019_Resume_Andrei_Petcu.pdf" target="_blank">Download CV</a>
+						<a class="downlad-btn" href="Downloads/2024_Resume_Andrei_Petcu.pdf" target="_blank">Download CV</a>
 					</div><!-- col-lg-2 -->
 			
 				</div><!-- row -->
@@ -105,7 +105,7 @@
 					</div>
 				</div><!-- col-sm-3 -->
 				<div class="col-sm-12 col-md-9">
-					<p class="margin-b-50">Organized and hard-working problem solver with over 7 years of engineering experience 
+					<p class="margin-b-50">Organized and hard-working problem solver with over 10 years of engineering experience 
 						specializing in industrial engineering and control systems. Successful in taking multiple projects from inception through 
 						design, fabrication, programming and delivery to customer with on site training. Also experienced in new product development
 						including rapid prototyping and circuit board design.<br><br>Please feel free to contact me as I am always eager to try new things
@@ -165,9 +165,30 @@
 				
 				<div class="col-sm-12 col-md-9">
 					<div class="experience margin-b-50">
-						<h4><b>Project Engineer</b></h4>
+						<h4><b>Engineer III</b></h4>
+						<h5 class="font-yellow"><b>Parker Hannifin, Military Flight Controls </b></h5>
+						<h6 class="font-lite-black margin-t-10">NOVEMBER 2022 - PRESENT</h6>
+						<ul class="list margin-b-30">
+							<li>Developed conceptual and detailed product specifications by analyzing performance and customer requirements.</li>
+							<li>Applied scientific analysis and mathematical models to predict and measure design alternatives outcome and consequences. </li>
+							<li>Contributed to the completion of milestones associated with specific projects. Designed components to meet customer requirements.</li>
+						</ul>
+					</div><!-- experience -->
+
+
+					<div class="experience margin-b-50">
+						<h4><b>Engineering Consultant</b></h4>
+						<h5 class="font-yellow"><b>Self Employed</b></h5>
+						<h6 class="font-lite-black margin-t-10">NOVEMEBER 2022 - PRESENT</h6>
+						<p class="margin-tb-30">Designing PCB based embedded control systems similar to NEST or ECOBEE but for monitoring and controlling 
+							pressure and level within large water tanks. Designing, developing and programming new control system. </p>
+					</div><!-- experience -->
+
+
+					<div class="experience margin-b-50">
+						<h4><b>Sr. Project Engineer</b></h4>
 						<h5 class="font-yellow"><b>PULSCO Inc.</b></h5>
-						<h6 class="font-lite-black margin-t-10">JUNE 2015 - PRESENT</h6>
+						<h6 class="font-lite-black margin-t-10">JUNE 2015 - NOVEMBER 2022</h6>
 						<p class="margin-tb-30">During my time at PULSCO I've had the opportunity to experience many facets of the business. 
 							I've worked on multiple product lines, in the R&D department, and lastly as the lead database designer for the entire company.
 							<br><br>
@@ -180,7 +201,7 @@
 							<li>Hydropneumatic Project Engineer - Delivered a total of 40+ systems</li>
 							<li>Dampener Project Engineer - Delivered a total of 10+ dampeners </li>
 							<li>R&D - Released a 4-20mA signal transmitter to USB data logger device to market</li>
-							<li>R&D - Developing next generation control panels based on embedded PCBs as a replacement for current PLC panels</li>
+							<li>R&D - Developing next generation control panels based on embedded PCBs</li>
 							<li>R&D - Developing bladder type pulsation dampeners</li>
 							<li>Lead Document Controller - Implemented Solidworks PDM system</li>
 							<li>Lead Database Designer - Implemented quote and project tracking database, including KPIs</li>
@@ -247,6 +268,7 @@
 					<a href="images/Surge_Tank_Grout.jpg" data-fluidbox>
 						<img src="images/Surge_Tank_Grout.jpg" alt=""></a>
 				</div><!-- p-item -->
+
 				<div class="p-item Professional">
 					<a href="images/20180403_090843.jpg" data-fluidbox>
 						<img src="images/20180403_090843.jpg" alt=""></a>
